# Toplumsal-Fren-Sistemleri

./: README.dev.md  README.md  pyproject.toml  requirements.txt  run_simulation.py
.github/workflows/: python-app.yml
tests/: test_core.py
toplumsal_fren_sistemleri/: __init__.py  core.py  visualize.py
